# spl-404

./: .gitignore  Anchor.toml  README.md  package.json
programs/spl-404/: Cargo.toml
programs/spl-404/src/: constants.rs  errors.rs  lib.rs
programs/spl-404/src/instructions/: burn.rs  burn_guard.rs  burn_nft.rs  burn_token.rs  create_guard.rs  create_mystery_box.rs  create_token.rs  guard.rs  initialize_guard_allocation.rs  mint.rs  mint_mystery_box_token.rs  mint_nft.rs  mint_token.rs  mint_token_supply.rs  mod.rs  swap.rs  swap_nft.rs  swap_token.rs  transfer_token.rs  update_guard.rs  update_token.rs
programs/spl-404/src/state/: events.rs  guard.rs  guard_allocation.rs  mod.rs  mystery_box.rs  token.rs
sdk/: .prettierrc.json  README.md  package.json  tsconfig.json
sdk/src/: index.ts  test.ts
sdk/src/types/: idl_spl_404.json  spl_404.ts
sdk/src/utils/: address.ts  constants.ts  convertSecretKeyToKeypair.ts  encodeString.ts  formatNumber.ts  helpers.ts  string.ts  types.ts
tests/: spl-404.ts
