[package]
name = "spl-404"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_404"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version = "0.30.0" ,features = ["init-if-needed"] }
anchor-spl = "0.30.0"
solana-program = "=1.18.15"
spl-token-metadata-interface = "0.3.3"
spl-type-length-value = "0.4.3"
